--- a/antenne/antenne_cap.tex
+++ b/antenne/antenne_cap.tex
@@ -547,23 +547,23 @@ La potenza in ingresso si può calcolare quindi come
 	= R_A \, \frac{|I_A|^2}{2}
 \end{equation*}
 
-Essa può inoltre essere scomposta in potenza irradiata $P$ e potenza dissipata per effetto Joule $P_o$.
+Essa può inoltre essere scomposta in potenza irradiata $P$ e potenza dissipata per effetto Joule $P_{_0}$.
 \begin{esp*}
 	P_{IN}
-	&= P + P_o
-	= P + R_o \, \frac{|I_A|^2}{2}
-	\stackrel{(*)}{=} R_r \frac{|I_A|^2}{2} + R_o \\
-	& = \left( R_r + R_o  \right) \frac{|I_A|^2}{2}
+	&= P + P_{_0}
+	= P + R_{_0} \, \frac{|I_A|^2}{2}
+	\stackrel{(*)}{=} R_r \frac{|I_A|^2}{2} + R_{_0} \\
+	& = \left( R_r + R_{_0}  \right) \frac{|I_A|^2}{2}
 	= R_A \, \frac{|I_A|^2}{2}
 \end{esp*}
-definendo $R_o$ resistenza ohmica dell'antenna e $R_r$ la \emph{resistenza di radiazione}, tale per cui $P=R_r \, |I_A|^2 / 2$.
+definendo $R_{_0}$ resistenza ohmica dell'antenna e $R_r$ la \emph{resistenza di radiazione}, tale per cui $P=R_r \, |I_A|^2 / 2$.
 
 Perciò si può esprimere l'efficienza d'antenna anche in termini di impedenza, infatti
 \begin{equation*}
 	e_r
 	= \frac{P}{P_{IN}}
 	= \frac{R_r}{R_A}
-	= \frac{R_r}{R_r + R_o}
+	= \frac{R_r}{R_r + R_{_0}}
 	\le 1
 \end{equation*}
 
