--- a/antenne/onde_piane.tex
+++ b/antenne/onde_piane.tex
@@ -1,8 +1,8 @@
 \chapter{Onde piane}
 Le onde piane sono particolari soluzioni delle equazioni di Maxwell che hanno proprietà e simmetrie notevoli che ne semplificano notevolmente lo studio rispetto al caso generale.
 
-\section{Equazioni di Helmotz}
-	Le equazioni di Maxwell possono essere riscritte come le cosiddette equazioni di Helmotz, nel caso in cui il mezzo sia il vuoto.
+\section{Equazioni di HelmHoltz}
+	Le equazioni di Maxwell possono essere riscritte come le cosiddette equazioni di Helmholtz, nel caso in cui il mezzo sia il vuoto.
 
 	\begin{equation*}
 		\begin{cases}
