--- a/antenne/array.tex
+++ b/antenne/array.tex
@@ -65,7 +65,7 @@
 				|AF(\psi = 0)|
 					& = A_0
 						~ \left( \lim_{\psi \to 0} \frac{ \sin(\frac{n}{2} \psi) }{ \sin(\frac{\psi}{2}) } \right)
-						~ \left| \frac{ e^{\jmath \frac{n-1}{2} \psi} }{ e^{\jmath \psi} } \right|
+						~ \left| e^{\jmath \frac{n-1}{2} \psi} \right|
 						= A_0 \cdot n \cdot 1 = A_0 \cdot n
 			\end{esp}
 
@@ -95,7 +95,7 @@
 			\end{esp}
 
 		\subsubsection{Lobi secondari}
-			Lobi secondari troppo pronunciati possono minare la direttività dell'array: per questo motivo è utile calcolarne l'entità.
+			Lobi secondari troppo pronunciati possono minare la direttività dell'array, per questo motivo è utile calcolarne l'entità.
 
 			Cerco quindi i massimi della funzione \gls{af}.
 
@@ -132,7 +132,15 @@
 			\end{equation*}
 
 			Ottenute le posizioni di massimi e minimi in $\psi$ è possibile calcolare attraverso la funzione $AF(\psi)$ il valore di \gls{sll}, misura del rapporto tra lobi primari e secondari.
+			Assumendo che esista il primo lobo secondario, otteniamo che $\psi_1 = \frac{3\pi}{n}$. Il valore assoluto dell'array factor per il primo lobo secondario, quindi, risulta pari a
+			\begin{equation}
+				|AF(\psi_1) | = \left|\frac{sin\left(\pm n \frac{3 \pi}{2 n}\right)}{sin\left(\pm \frac{3\pi}{2 n}\right)}\right| \approx \frac{2n}{3\pi}
+			\end{equation}
+Poiché nel lobo principale l'array factor è $|AF(\psi=0)|=n$, il side lobe level risulta indipendente dal numero di antenne della schiera ed è pari a
 
+\begin{equation}
+	SLL=10\,log_{10}\left|\frac{AF(\psi_1)}{AF(\psi=0)}\right|^2 = 20\,log_{10}\left(\frac{2}{3\pi}\right) \approx -13,5dB
+\end{equation}
 	\subsection{Tipologie di schiere lineari fasate}
 		Come si può notare dalla definizione di $\psi$, il massimo che si ha per $\psi = 0$ corrisponde ad un valore di $\theta$ che è funzione dello sfasamento delle correnti $\alpha$.
 
@@ -147,7 +155,73 @@
 			& \implies \theta_0 = 0 \land \theta_0 = \pi
 			& \text{schiere \emph{endfire}} \\
 		\end{esp*}
-% \clearpage
+\clearpage
+\section{Larghezza del lobo al primo zero}
+Vogliamo ora identificare l'angolo all'interno del quale si estende il massimo di radiazione della schiera, \textbf{BWFN} \emph{Beam Width at First Null}. Divideremo l'analisi nel caso la schiera sia un broadside o un endfire array.
+
+\subsubsection{Broadside array: $\alpha=0$}
+Nel caso broadside, i primi due minimi si trovano risolvendo
+\begin{esp}
+	\frac{n}{2}\beta d & cos(\theta_{FN}) = \pm \pi \quad \Leftrightarrow \quad \frac{n \pi}{\lambda} \, d \, cos(\theta_{FN})=\pm 1\\
+	\theta_{FN_{1/2}}&= cos^{-1}\left(\pm\frac{\lambda}{n d}\right)
+\end{esp}
+Il BWFN sarà quindi
+\begin{esp}
+	BWFN &= \left| \theta_{FN_{left}} - \theta_{FN_{right}}\right| =  \left|cos^{-1}\left(-\frac{\lambda}{n d}\right) - cos^{-1}\left(\frac{\lambda}{n d}\right) \right| \\
+	&\stackrel{n d\, \gg\, \lambda}{\approx} \left| \frac{\pi}{2}- \frac{\lambda}{n d} -\left(\frac{\pi}{2} + \frac{\lambda}{n d}\right)\right|\\
+	BWFN &\approx \frac{2\lambda}{n d}
+\end{esp}
+
+\subsubsection{Endfire array: $\alpha=\pm \beta d$}
+Nel caso broadside, i primi due minimi si trovano risolvendo
+
+\begin{esp*}
+	\frac{n}{2}\beta d &\left[ cos(\theta_{FN})\pm 1\right] = \pm \pi \quad \Leftrightarrow \quad \frac{n \pi}{\lambda} \, d \, \left[ cos(\theta_{FN})\pm 1\right]=\pm 1
+\end{esp*}
+\begin{equation*} cos(\theta_{FN}) =
+	\begin{cases}
+		\frac{\lambda}{n \, d} - 1 & \text{Le altre possibilità non danno}\\
+		-\frac{\lambda}{n \, d} + 1 & \text{un valido }\theta_{FN}~ (cos(\theta)\in [-1;1])
+	\end{cases}
+\end{equation*}
+
+
+Utilizzando le formule di duplicazione del coseno:
+
+
+\begin{equation}
+	cos(x)=cos^2\left(\frac{x}{2}\right)-sin^2\left(\frac{x}{2}\right) = 2 cos^2\left(\frac{x}{2}\right)-1 = 1 - 2 sin^2\left(\frac{x}{2}\right)
+\end{equation}
+
+\clearpage
+possiamo riscrivere le due soluzioni come
+\begin{enumerate}
+	\item \begin{esp}
+	&cos(\theta_{FN}) = \frac{\lambda}{n \, d} - 1 \Leftrightarrow cos(\theta_{FN}) +1 = \frac{\lambda}{n \, d} \\
+	& \Leftrightarrow  2 cos^2\left(\frac{\theta_{FN}}{2}\right) = \frac{\lambda}{n \, d}\\
+	&\implies \theta_{FN} = 2 arcos\left(\pm \sqrt{\frac{\lambda}{2n \, d}}\right)
+\end{esp}
+che per $n d \gg \lambda$
+\begin{equation*}
+	\theta_{FN_{1/2}} \approx \pi \mp 2 \sqrt{\frac{\lambda}{2n \, d}}
+\end{equation*}
+
+\item
+\begin{esp}
+&cos(\theta_{FN}) = -\frac{\lambda}{n \, d} + 1 \Leftrightarrow 1 - cos(\theta_{FN})  = \frac{\lambda}{n \, d} \\
+& \Leftrightarrow  2 sin^2\left(\frac{\theta_{FN}}{2}\right) = \frac{\lambda}{n \, d}\\
+&\implies \theta_{FN} = 2 arcsin\left(\pm \sqrt{\frac{\lambda}{2n \, d}}\right)
+\end{esp}
+che per $n d \gg \lambda$
+\begin{equation*}
+\theta_{FN_{1/2}} \approx \pm 2 \sqrt{\frac{\lambda}{2n \, d}}
+\end{equation*}
+\end{enumerate}
+
+In entrambi i casi la soluzione porta a
+\begin{esp}
+	BWFN &= \left| \theta_{FN_{left}} - \theta_{FN_{right}}\right| \approx 4\frac{\lambda}{2 n \, d}
+\end{esp}
 \section{Schiera di antenne non isotrope}
 	Osserveremo ora il caso generico in cui le antenne isotrope ideali sono rimpiazzate da antenne reali.
 
