--- a/antenne/patch.tex
+++ b/antenne/patch.tex
@@ -50,13 +50,13 @@ Nel caso in cui si inserisca l'inset, è sufficiente modificare la formula appen
 Inoltre, in una patch con inset, l'asse centrale (a $W / 2$) dell'antenna ha campo nullo, per cui è possibile inserire qui un piano di massa, dimezzando le dimensioni dell'antenna.
 
 \subsection{Qualità dell'antenna}
-Definiamo qualità dell'antenna il rapporto tra energia elettromagnetica $W$ e potenza irradiata $P$ a una certa frequenza $f$, ossia
+Definiamo qualità, o \emph{fattore di merito}, dell'antenna il rapporto tra energia elettromagnetica $W$ e potenza irradiata $P$ a una certa frequenza $f$, ossia
 \begin{equation}
 	Q_A=2\pi f \frac{W}{P} \ge \frac{1}{(\beta D)^3}
 \end{equation}
 dove $\beta = \frac{2\pi}{\lambda}$ e $D$ è la dimensione dell'antenna.
 
-Come si può notare, la qualità presenta un limite superiore: non è possibile quindi, neppure con gli apparecchi più sofisticati, ottenere un'efficienza d'antenna arbitraria.
+Come si può notare, la qualità presenta un limite superiore alla potenza irradiata: non è possibile quindi, neppure con gli apparecchi più sofisticati, ottenere un'efficienza d'antenna arbitraria.
 
 \section{Bilanciamento antenne e BAL-UN}
 
