--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -54,11 +54,11 @@
 
 \theoremstyle{theoremdd}
 % support for counting
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{corollary}{Corollary}[theorem]
+\newtheorem{theorem}{Teorema}[section]
+\newtheorem{corollary}{Corollario}[theorem]
 \newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{definition}{Definition}
-\newtheorem{remark}{Remark}
+\newtheorem{definition}{Definizione}
+\newtheorem{remark}{Nota}
 
 % added support for proof parts
 \theoremstyle{remark}
